--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Fira+Sans+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,8 +8,21 @@ html,
 body,
 :root {
   height: 100%;
+  font-family: var(--font-signika);
 }
 
+/*
+    --primary-black: 0, 0%, 4%, 1; // #0A0A0A
+    --secondary-black: 0, 0%, 5%, 1; // #0D0D0D
+
+    --primary-gray: 0, 0%, 100%, 0.1; // #ffffff
+    --secondary-gray: 0, 0%, 60%, 1; // #999999
+
+    --primary-white: 60, 25%, 98%, 1; // #FCFCFA
+
+    --primary-orange: 5, 100%, 53%, 1; // #FF220E
+    --secondary-orange: 5, 100%, 60%, 1; // #FF4533
+*/
 @layer base {
   :root {
     --primary-black: 0, 0%, 4%, 1;
@@ -99,6 +114,36 @@ body,
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-primary_white dark:bg-primary_black text-foreground;
   }
+}
+.bg-glow-1 {
+  background: conic-gradient(
+    from 0deg at 50% 50%,
+    #ffd9ad 0deg,
+    #139ce5 180deg,
+    #fd864d 360deg
+  );
+}
+
+.bg-glow-2 {
+  background: conic-gradient(
+    from 0deg at 50% 50%,
+    #ffd9ad 0deg,
+    #139ce5 180deg,
+    #fd864d 360deg
+  );
+}
+
+.bg-glow-3 {
+  background: conic-gradient(
+    from 0deg at 50% 50%,
+    #ff0000 0deg,
+    hsl(354, 100%, 50%) 54.89161972682219deg,
+    #00a6ff 106.69924423399361deg,
+    #4797ff 162deg,
+    #04f 252.00000000000003deg,
+    #ff8000 306.00000000000006deg,
+    hsl(0, 100%, 50%) 360deg
+  );
 }
