--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,7 @@ body,
     --secondary-gray: 0, 0%, 60%, 1; // #999999
 
     --primary-white: 60, 25%, 98%, 1; // #FCFCFA
+    --secondary-white: 0, 9%, 94%, 0.3; // #f0eded7a
 
     --primary-orange: 5, 100%, 53%, 1; // #FF220E
     --secondary-orange: 5, 100%, 60%, 1; // #FF4533
@@ -32,6 +33,7 @@ body,
     --secondary-gray: 0, 0%, 60%, 1;
 
     --primary-white: 60, 25%, 98%, 1;
+    --secondary-white: 0, 9%, 94%, 0.3;
 
     --primary-orange: 5, 100%, 53%, 1;
     --secondary-orange: 5, 100%, 60%, 1;
@@ -75,6 +77,7 @@ body,
     --secondary-gray: 0, 0%, 60%, 1;
 
     --primary-white: 60, 25%, 98%, 1;
+    --secondary-white: 0, 9%, 94%, 0.3;
 
     --primary-orange: 5, 100%, 53%, 1;
     --secondary-orange: 5, 100%, 60%, 1;
